objects/DandB_KeyInfluencingFactor__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_KeyInfluencingFactor</relationshipLabel>
        <relationshipName>DandB_KeyInfluencingFactor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <label>code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>desctiption__c</fullName>
        <label>desctiption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DandB_KeyInfluencingFactor</label>
    <nameField>
        <label>DandB_KeyInfluencingFactor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_KeyInfluencingFactor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>